--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -24,4 +24,4 @@ jobs:
         pip install -r requirements.txt  # Make sure to create requirements.txt if you have dependencies
 
     - name: Run the script
-      run: python your_script.py  # Replace with the actual name of your Python script
+      run: python scraper.py  # Replace with the actual name of your Python script
