--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Run the script
       run: |
         python scraper.py
-        cp news.json $GITHUB_WORKSPACE/  # Move the JSON file to the repository root
+        cp -f news.json $GITHUB_WORKSPACE/  # Move the JSON file to the repository root
 
     - name: Upload JSON artifact
       uses: actions/upload-artifact@v2
