Trying to make it run manually

--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -25,8 +25,8 @@ jobs:
 
     - name: Run the script
       run: |
-        rm news.json  # Remove the original news.json file
         python scraper.py
+        mv -f news.json $GITHUB_WORKSPACE/vbl_news.json  # Rename the file
 
     - name: Upload JSON artifact
       uses: actions/upload-artifact@v2
