--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -29,11 +29,11 @@ jobs:
 
     - name: Rename and upload JSON artifact
       run: |
-        mv -f news.json $GITHUB_WORKSPACE/vbl_news.json
+        # mv -f vbl_news.json $GITHUB_WORKSPACE/vbl_news.json
         echo "File renamed and ready for upload"
 
     - name: Upload JSON artifact
       uses: actions/upload-artifact@v2
       with:
         name: vbl_news
-        path: $GITHUB_WORKSPACE/vbl_news.json  # Upload the renamed news.json file
+        path: $GITHUB_WORKSPACE/news.json  # Upload the renamed news.json file
