--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -31,16 +31,16 @@ jobs:
         run: |
           python scraper.py
 
-      - name: Rename and upload JSON artifact
-        run: |
-          mv -f news.json $GITHUB_WORKSPACE/vbl_news.json
-          echo "File renamed and ready for upload"
+      # - name: Rename and upload JSON artifact
+      #   run: |
+      #     mv -f news.json $GITHUB_WORKSPACE/vbl_news.json
+      #     echo "File renamed and ready for upload"
 
       - name: Upload JSON artifact
         uses: actions/upload-artifact@v4
         with:
           name: vbl_news
-          path: $GITHUB_WORKSPACE/vbl_news.json # Upload the renamed news.json file
+          path: news.json # Upload the renamed news.json file
 
       - name: Debug Workspace
         run: |
