--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -31,16 +31,16 @@ jobs:
         run: |
           python scraper.py
 
-      - name: Rename and upload JSON artifact
-        run: |
-          mv -f news.json data/news.json
-          echo "File renamed and ready for upload"
+      # - name: Rename and upload JSON artifact
+      #   run: |
+      #     mv -f news.json data/news.json
+      #     echo "File renamed and ready for upload"
 
       - name: Upload JSON artifact
         uses: actions/upload-artifact@v4
         with:
           name: news
-          path: data/news.json
+          path: ./news.json
 
       - name: Debug Workspace
         run: |
